# Vera

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  main.cpp  vcpkg.json
Source/: CMakeLists.txt  Vera.cpp  Vera.h  main.cpp
Source/Assets/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Defines.h  Mesh.h  MeshData.h
Source/Assets/Material/: CMakeLists.txt  Material.cpp  Material.h  MaterialData.h  MaterialInfo.h  VeraMaterial.cpp  VeraMaterial.h  VeraMaterialLoader.cpp  VeraMaterialLoader.h
Source/Assets/Model/: CMakeLists.txt  MeshDescription.h  Model.cpp  Model.h  ModelData.h  ModelDescription.h  ModelInfo.h  Triangle.h  Vertex.h
Source/Assets/Texture/: CMakeLists.txt  TextureData.h  TextureLoader.cpp  TextureLoader.h
Source/Editor/: CMakeLists.txt  Defines.h  Editor.cpp  Editor.h
Source/Editor/GUI/: CMakeLists.txt  GUI.cpp  GUI.h
Source/Editor/Project/: Project.h
Source/Editor/Window/: CMakeLists.txt  GLFWWindow.cpp  GLFWWindow.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
Source/Editor/editorCommands/: ChangeProjectNameCommand.h  CreateLightCommand.cpp  GenerateRayTracedImagesQueueCommand.cpp  GenerateRayTracedImagesQueueCommand.h  LoadProjectCommand.h  RefreshRayTracerConfigCommand.cpp  SaveProjectCommand.cpp  SaveProjectCommand.h  SetObjectToBeOutlinedCommand.h  ToggleLiveRayTracingCommand.cpp  ToggleLiveRayTracingCommand.h
Source/GUI/: Display.cpp  Display.h  GUI.cpp  GUI.h
Source/GUI/GUIElements/: CMakeLists.txt  SceneOutlinerGUIElement.h  TopMenuGUIElement.cpp
Source/Geometry/: OrthonormalBasis.h
Source/Input/: CMakeLists.txt  GLFWInputManager.cpp  GLFWInputManager.h  GLFWKeyMappings.cpp  GLFWKeyMappings.h  Input.h  InputManager.cpp  InputManager.h  KeyCodes.h  KeyMappings.cpp  KeyMappings.h  KeyMappingsSystem.cpp  KeyMappingsSystem.h  KeyboardMovementController.cpp  KeyboardMovementController.h
Source/Logs/: BasicLogger.cpp  BasicLogger.h  CMakeLists.txt  Defines.h  FileLogger.cpp  FileLogger.h  LogSeverity.h  LogSystem.cpp  LogSystem.h  Logger.h  LoggerDecorator.cpp  LoggerDecorator.h
Source/Materials/: CMakeLists.txt  Material.cu  Material.h  MaterialParameters.h  TextureAsset.cu
Source/Memory/: AllocatorInfo.h  Buffer.cpp  Buffer.h  BufferInfo.h  CMakeLists.txt  Image.cpp  Image.h  MemoryAllocator.h
Source/Memory/Vulkan/: CMakeLists.txt  VmaUsage.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h
Source/Models/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  ModelData.h  RawModel.h  TextureData.cpp  TextureData.h  TriangleData.h  Vertex.h
Source/Models/OBJUtils/: OBJLoader.cpp
Source/Objects/: CMakeLists.txt  CollectedShapes.h  ConstantMedia.cu  Object.cpp  Object.h  TickGroups.h  TriangleMesh.cu  TriangleMesh.h  TriangleMeshInfo.h
Source/Objects/Components/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  ObjectComponent.cpp  ObjectComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  PointLightComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Objects/Lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Spotlight.cpp  Spotlight.h
Source/Project/: ObjectInfo.h  Project.cpp  Project.h  TriangleMeshInfo.h
Source/RenderEngine/: CMakeLists.txt  Camera.cpp  Camera.h  CameraUBO.h  Defines.h  EntityRenderer.cpp  EntityRenderer.h  FrameInfo.h  GlobalUBO.h  Renderer.cpp  Renderer.h  RendererDefines.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  Window.cpp  Window.h
Source/RenderEngine/AccelerationStructures/: AABB.cpp  AABB.h  AccelerationStructure.cpp  AccelerationStructure.h  Blas.cpp  Blas.h  BlasBuilder.cpp  BlasBuilder.h  BlasInstance.h  CMakeLists.txt  ObjectDescription.h  RayTracingAccelerationStructureBuilder.h  RayTracingBuilder.cpp  Tlas.cpp  Tlas.h  TlasBuilder.cpp  TlasBuilder.h
Source/RenderEngine/GLObjects/: UniformBuffer.h
Source/RenderEngine/HDR/: CMakeLists.txt  HDRShader.cpp  HDRShader.h  ToneMappingShader.h
Source/RenderEngine/Images/: CMakeLists.txt  ImageShader.cpp  ImageShader.h  RayTracedImageShader.cpp  RayTracedImageShader.h
Source/RenderEngine/Materials/: CMakeLists.txt  DeviceMaterialInfo.h  Material.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialDefines.h  MaterialDescription.h  MaterialInfo.h  (+5 more)
Source/Scene/: Scene.cpp  Scene.h
Source/Shaders/: CMakeLists.txt  OutlineShader.cpp  OutlineShader.h  RayTracedImageShader.cpp  RayTracedImageShader.h  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h
Source/Utils/: Algorithms.cpp  Algorithms.cu  Algorithms.h  CMakeLists.txt  DeviceObjectsAllocation.h  PathBuilder.cpp  PathBuilder.h  Timer.h  VeraDefines.h
Source/World/: CMakeLists.txt  World.cpp  World.h
src/: CMakeLists.txt  TinyRayTracingApp.cu  TinyRayTracingApp.h  Vera.cu  main.cu
src/GUI/: CMakeLists.txt  Display.cpp  Display.h  GUI.cpp  GUI.h
src/Geometry/: Bounds.h
src/Materials/: CMakeLists.txt  Material.cu  Material.h  MaterialAsset.h  MaterialParameters.h  TextureAsset.cu  TextureAsset.h
src/Objects/: CMakeLists.txt  Camera.cpp  Camera.h  ConstantMedia.cu  ConstantMedia.h  Object.cpp  Object.cu  Object.h  ObjectInfo.h  ShapesCollector.cpp  ShapesCollector.h  TriangleMesh.cu  TriangleMesh.h
src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
src/editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/input/: CMakeLists.txt  Input.cpp
src/models/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  ModelData.h  ModelTexture.h  TextureData.h  Vertex.h
src/renderEngine/: CMakeLists.txt  Camera.cpp  Camera.h  EntityRenderer.cpp  EntityRenderer.h  MasterRenderer.cpp  MasterRenderer.h  Renderer.cpp  Renderer.h
src/shaders/: CMakeLists.txt  OutlineShader.cpp  RayTracedImageShader.cpp  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h
src/utils/: AdditionalAlgorithms.cu  AdditionalAlgorithms.h  Algorithms.cu  Algorithms.h  CMakeLists.txt  CudaErrorChecker.h  CurandUtils.cu  CurandUtils.h  DeviceMemoryPointer.h  DeviceObjectsAllocation.h  Timer.cpp
(+596 files in other folders)
